<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.volleytesting.Pedidos" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/borrarPedido"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_eliminar"
        android:title="@string/menu_pedidos_EliminarPedido"/>
    <item
        android:id="@+id/pedido"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_addpedido"
        android:title="@string/menu_pedidos_tomarPedido"/>
    
    <item
        android:id="@+id/facturarMesa"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_pedidos_Facturar"/>

</menu>