<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.volleytesting.ProductosActivity" >

    <item
        android:id="@+id/eliminar"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_productos_eliminar"/>
    
    <item
        android:id="@+id/agregar"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_productos_Agregar"/>
    
    <item
        android:id="@+id/enviarPedido"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_productos_enviar"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>         

</menu>
